--- a/style.css
+++ b/style.css
@@ -24,3 +24,32 @@
     padding: 9px 25px;
     cursor: pointer;
 }
+
+.cat1, .cat2, .cat3{
+    padding: 10px 30px;
+    border-radius: 10px;
+}
+
+.cat1{
+    background-color: #ffa801;
+}
+
+.cat2{
+    background-color: #ef5777;
+}
+
+.cat3{
+    background-color: #0652DD;
+}
+.categories h1{
+    color: white;
+}
+
+.categories img{
+    width: 100px;
+}
+
+.card{
+    border: none;
+    box-shadow: 5px 5px 10px lightgray;
+}
